--- a/www/templates/customer/main-abstract.html
+++ b/www/templates/customer/main-abstract.html
@@ -12,6 +12,7 @@
       <ion-content has-header="true">
         <ul class="list">
           <a ui-sref="customer.dash" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-social-buffer"></i>Dashboard</a>
+          <a ui-sref="customer.profile" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-person"></i>Profile</a>
           <a ui-sref="customer.setting" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-gear-a"></i>Setting</a>
           <a ui-sref="customer.help" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-help"></i>Help</a>
           <a ui-sref="customer.contact" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-email"></i> Contact</a>
