--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7740,23 +7740,35 @@ a.button {
   margin: 0; }
 
 /**************************/
-.list .item {
-  border-top: none;
-  border-right: none; }
-  .list .item .number {
-    background-color: #FF662D;
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    max-width: 70px;
-    max-height: 80px;
-    padding: 16px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 1.5em;
-    font-weight: 600;
-    line-height: 1.5em;
-    display: table-cell;
-    color: white; }
+.list {
+  /*.item{
+    border-top: none;
+    border-right: none;
+    .number{
+      background-color: #FF662D;
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      max-width: 70px;
+      max-height: 80px;
+      padding: 16px;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      vertical-align: middle;
+      font-size: 1.5em;
+      font-weight: 600;
+      line-height: 1.5em;
+      display: table-cell;
+      color: white;
+    }
+  }*/ }
+  .list .item.item-accordion {
+    line-height: 38px;
+    padding-top: 0%;
+    padding-bottom: 0;
+    transition: 0.09s all linear; }
+  .list .item.item-accordion.ng-hide {
+    line-height: 0; }
+  .list .item.item-accordion.ng-hide-add, .list .item.item-accordion.ng-hide-remove {
+    display: block !important; }
