--- a/www/templates/customer/around.html
+++ b/www/templates/customer/around.html
@@ -2,15 +2,13 @@
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    <!--div class="bar bar-header item-input-inset">
+    <div class="bar bar-header item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios-search placeholder-icon"></i>
-            <input type="search" placeholder="Search">
+            <input type="search" placeholder="Search"/>
         </label>
-        <button class="button button-clear">
-            Cancel
-        </button>
-    </div-->
+        <button class="button button-clear">Cancel</button>
+    </div>
     <ion-content has-header="true" padding="true">
         <div id="map" data-tap-disabled="true"></div>
     </ion-content>
