--- a/www/templates/customer/feedback.html
+++ b/www/templates/customer/feedback.html
@@ -7,11 +7,11 @@
             </div>
             <div class="item range">
                 <i class="icon ion-android-star-outline"></i>
-                <input type="range" name="rate">
+                <input type="range" name="rate" ng-model="data.rate">
                 <i class="icon ion-android-star"></i>
             </div>
             <label class="item item-input">
-                <textarea placeholder="Comments"rows="8"></textarea>
+                <textarea placeholder="Comments" rows="8" ng-model="data.comment"></textarea>
             </label>
         </div>
         <button class="button button-block button-positive">Submit</button>
