--- a/www/templates/public/forgot_password.html
+++ b/www/templates/public/forgot_password.html
@@ -7,13 +7,20 @@
         <div class="logo-body">
             <img src="/img/logo_512.png" width="200" height="200" alt="Logo"/>
         </div>
-        <div class="list list-inset">
-            <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="data.username">
-            </label>
-        </div>
-        <div class="button-bar">
-            <button class="button button-positive" ng-click="">Submit</button>
-        </div>
+        <form ng-submit="resetPassword(data)">
+            <div class="list list-inset">
+                <label class="item item-input">
+                    <input type="text" placeholder="Username/Email address" ng-model="data.username">
+                </label>
+            </div>
+            <div class="list list-inset" ng-class="{active: isSecurityCodeShown()}">
+                <label class="item item-input">
+                    <input type="text" placeholder="Security code" ng-model="data.code">
+                </label>
+            </div>
+            <div class="button-bar">
+                <button class="button button-positive" ng-click="">Submit</button>
+            </div>
+        </form>
     </ion-content>
 </ion-view>
