--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,92 @@
 /* Empty. Add your own CSS if you like */
+.login-page {
+  background: url("../img/bg3.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  transition: background-image 2s ease-in-out; }
+
+.pull-right {
+  float: right; }
+
+.button-halfwidth {
+  width: 49%; }
+
+.button-fullwidth {
+  width: 100%; }
+
+.tabbed-content-within-sidemenu-app {
+  z-index: 5; }
+
+.logo-body {
+  text-align: center; }
+
+.card-circle {
+  border: 4px solid #ff3b30;
+  padding: 10px;
+  border-radius: 999em; }
+  .card-circle #qrcode {
+    display: inline-block; }
+
+.qrcode {
+  display: block;
+  margin: 24px auto 16px;
+  max-width: 100%; }
+
+.qrcode-link {
+  display: table;
+  margin: 24px auto 16px; }
+
+.qrcode-link .qrcode {
+  margin: 0; }
+
+/**************************/
+.list {
+  /*.item{
+    border-top: none;
+    border-right: none;
+    .number{
+      background-color: #FF662D;
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      max-width: 70px;
+      max-height: 80px;
+      padding: 16px;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      vertical-align: middle;
+      font-size: 1.5em;
+      font-weight: 600;
+      line-height: 1.5em;
+      display: table-cell;
+      color: white;
+    }
+  }*/ }
+  .list .item.item-accordion {
+    line-height: 38px;
+    padding-top: 0%;
+    padding-bottom: 0;
+    transition: 0.09s all linear;
+    min-height: 52px; }
+  .list .item.item-accordion.ng-hide {
+    line-height: 0; }
+  .list .item.item-accordion.ng-hide-add, .list .item.item-accordion.ng-hide-remove {
+    display: block !important; }
+
+.scroll {
+  height: 100%; }
+
+#map_canvas {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: relative; }
+  #map_canvas .angular-google-map-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0; }
