--- a/www/templates/customer/around.html
+++ b/www/templates/customer/around.html
@@ -2,14 +2,18 @@
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    <div class="bar bar-header item-input-inset">
-        <label class="item-input-wrapper">
-            <i class="icon ion-ios-search placeholder-icon"></i>
-            <input type="search" placeholder="Search"/>
-        </label>
-        <button class="button button-clear">Cancel</button>
-    </div>
     <ion-content has-header="true" padding="true">
-        <div id="map" data-tap-disabled="true"></div>
+        <ion-header-bar class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios-search placeholder-icon"></i>
+                <input id="addressInput" type="search" placeholder="Search" ng-model="addressInput"/>
+            </label>
+            <button class="button button-clear" ng-click="clearAddressInput()">Cancel</button>
+        </ion-header-bar>
+        <div id="map_canvas">
+            <map center="44.7032, -74.0052" center="current-location" zoom="9" data-tap-disabled="true" style="height: {{ dimenstion.dev_height }}">
+                <marker position="{{currentPosition.coords.lat}}, {{currentPosition.coords.lng}}" on-click="getCurrentAddress()" animation="DROP" draggable="true"></marker>
+            </map>
+        </div>
     </ion-content>
 </ion-view>
