--- a/www/templates/customer/help.html
+++ b/www/templates/customer/help.html
@@ -1,5 +1,7 @@
-<ion-view view-title="Contact" name="customer-contact-view">
-    <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+<ion-view view-title="Help" name="customer-help-view">
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
         This is open for everyone!
     </ion-content>
