--- a/www/templates/customer/policy.html
+++ b/www/templates/customer/policy.html
@@ -1,5 +1,7 @@
 <ion-view title="Privacy Policy">
-    <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-content has-header="true" padding="true">
 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel tellus lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent erat purus, tempus quis nisi pharetra, fermentum vehicula quam.<br/>
