--- a/www/templates/customer/profile.html
+++ b/www/templates/customer/profile.html
@@ -1,32 +1,30 @@
-<ion-view view-title="My Profile" name="customer-info-view">
-    <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+<ion-view view-title="My Profile" name="customer-profile-view">
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
-        <label class="item item-input">
-            <input type="text" placeholder="Username" ng-model="data.username">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="First Name" ng-model="data.firstname">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="Last Name" ng-model="data.lastname">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="Email" ng-model="data.email">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="Mobile Phone" ng-model="data.mobile_phone">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="Address" ng-model="data.address">
-        </label>
-        <label class="item item-input">
-            <input type="text" placeholder="Zipcode" ng-model="data.zipcode">
-        </label>
-        <label class="item item-input">
-            <input type="password" placeholder="Password" ng-model="data.password">
-        </label>
-        <label class="item item-input">
-            <input type="password" placeholder="Confirm Password" ng-model="data.confirm_password">
-        </label>
+        <form ng-submit="updateProfile(data)">
+            <label class="item item-input">
+                <input type="text" placeholder="Username" ng-model="data.username"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="First Name" ng-model="data.firstname"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="Last Name" ng-model="data.lastname"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="Email" ng-model="data.email"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="Mobile Phone" ng-model="data.mobile_phone"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="Address" ng-model="data.address"/>
+            </label>
+            <label class="item item-input">
+                <input type="text" placeholder="Zipcode" ng-model="data.zipcode"/>
+            </label>
+        </form>
     </ion-content>
 </ion-view>
