--- a/www/templates/customer/offer.html
+++ b/www/templates/customer/offer.html
@@ -25,7 +25,7 @@
         <ion-tab title="My Place" icon="ion-home" href="#/customer/dash">
             <ion-nav-view name="dash-tab"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Around" icon="ion-earth" href="#/customer/around">
+        <ion-tab title="Around" icon="ion-map" href="#/customer/around">
             <ion-nav-view name="around-tab"></ion-nav-view>
         </ion-tab>
         <ion-tab title="My Offer" icon="ion-android-subway" href="#/customer/offer">
