--- a/www/templates/customer/info.html
+++ b/www/templates/customer/info.html
@@ -14,6 +14,11 @@
                     consists of tabs, icons aligned left, within the card-footer.
                 </p>
             </div>
+            <div class="item item-icon-left">
+                <i class="icon ion-clock"></i>
+                <h3>Business hour</h3>
+                <p>{{ store.business_hour }}</p>
+            </div>
             <a href="tel:{{ store.phone }}" class="item item-icon-left" title="Phone">
                 <i class="icon ion-ios-telephone-outline"></i>
                 {{ store.phone }}
