--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -24,8 +24,13 @@
                 </div>
             </div>
             <button class="button button-block button-positive" ng-click="login(data)">Login</button>
-            <button class="button button-block button-balanced" ui-sref="signup">Sign Up</button>
-            <button class="button button-block button-royal" ui-sref="forgotpassword">Forgot Password</button>
+            <br/>
+            <div class="text-center">
+                Don't have an account yet? <a href="#" class="" ui-sref="signup">Sign Up</a>
+            </div><br/>
+            <div class="text-center">
+                Don't remember your password? <a href="#" class="" ui-sref="forgotpassword">Forgot Password</a>
+            </div>
         </form>
     </ion-content>
 </ion-view>
