--- a/www/templates/customer/dashboard.html
+++ b/www/templates/customer/dashboard.html
@@ -27,14 +27,14 @@
                 <br><br>
                 {{response}}
                 <div class="button-bar">
-                    <button class="button button-outline icon-left ion-information-circled button-positive" ui-sref="customer.info">Information</button>
-                    <button class="button button-outline icon-left ion-android-list button-balanced" ui-sref="customer.receipt">Receipt</button>
-                    <button class="button button-outline icon-left ion-android-star-outline button-royal" ui-sref="customer.feedback">Feedback</button>
+                    <button class="button button-outline icon-left ion-information-circled button-calm" ui-sref="customer.info">Information</button>
+                    <button class="button button-outline icon-left ion-android-list button-calm" ui-sref="customer.receipt">Receipt</button>
+                    <button class="button button-outline icon-left ion-android-star-outline button-calm" ui-sref="customer.feedback">Feedback</button>
                 </div>
             </div>
         </div>
     </ion-content>
-    <ion-tabs class="tabs-icon-top tabsbalanced">
+    <ion-tabs class="tabs-icon-top tabs-light">
         <ion-tab title="My Place" icon="ion-home" href="#/customer/dash">
             <ion-nav-view name="dash-tab"></ion-nav-view>
         </ion-tab>
