--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
 /* Empty. Add your own CSS if you like */
+
+@import "www/lib/ionic/scss/_variables";
 $ion-img-path: "../img" !default;
 .center-block {
   display: block;
@@ -43,6 +45,12 @@ $ion-img-path: "../img" !default;
 .tabbed-content-within-sidemenu-app{
   z-index: 5;
 }
+/************** well ***************/
+.well{
+  padding: $content-padding;
+  line-height: $line-height-computed;
+  background-color: rgba(255,255,225,0.5);
+}
 /************ Place-window ****************/
 .place-window{
   .place-heading{
@@ -55,7 +63,7 @@ $ion-img-path: "../img" !default;
 /************ End Place-window ****************/
 /************ QR Code****************/
 .card-circle{
-  border: 4px solid #ff3b30;
+  border: 10px solid #ff3b30;
   padding: 10px;
   border-radius: 999em;
   #qrcode{
@@ -92,7 +100,7 @@ $ion-img-path: "../img" !default;
     }
 
     &.odd {
-      background-color: rgb(170, ​ 170, ​ 170) !important;
+      background-color: #c0c0c0 !important;
     }
   }
 }
