--- a/www/templates/customer/main-abstract.html
+++ b/www/templates/customer/main-abstract.html
@@ -1,12 +1,12 @@
 <ion-side-menus>
     <ion-side-menu-content ng-controller="DashCtrl">
-      <ion-nav-bar class="bar-energized nav-title-slide-ios7">
+      <ion-nav-bar class="bar-positive nav-title-slide-ios7">
         <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
       </ion-nav-bar>
       <ion-nav-view name="main-content" animation="slide-left-right"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" ng-controller="NavController">
-      <ion-header-bar class="bar bar-header bar-assertive">
+      <ion-header-bar class="bar bar-header bar-calm">
         <h1 class="title">Menu</h1>
       </ion-header-bar>
       <ion-content has-header="true">
