--- a/www/templates/customer/receipt.html
+++ b/www/templates/customer/receipt.html
@@ -3,8 +3,8 @@
     <ion-content class="padding">
         <div class="list">
             <div ng-repeat="group in groups">
-                <ion-item class="item-stable" ng-click="toggleGroup(group)" ng-class="{active: isGroupShown(group)}">
-                    <i class="icon" ng-class="isGroupShown(group)? 'ion-minus' : 'ion-plus'"></i>
+                <ion-item class="item-calm" ng-click="toggleGroup(group)" ng-class="{active: isGroupShown(group)}">
+                    <i class="icon" ng-class="isGroupShown(group)? 'ion-android-arrow-dropdown' : 'ion-android-arrow-dropright'"></i>
                     {{ group.title }} in {{group.date | date:"MMM-yyyy"}}
                     <span class="badge badge-assertive"> {{ group.total | currency }}</span>
                 </ion-item>
