--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,9 @@
 
 @import "www/lib/ionic/scss/_variables";
 $ion-img-path: "../img" !default;
+.strong{
+  font-weight: 600;
+}
 .center-block {
   display: block;
   margin-left: auto;
@@ -100,7 +103,25 @@ $ion-img-path: "../img" !default;
     }
 
     &.odd {
-      background-color: #c0c0c0 !important;
+      background-color: #f0f0f0 !important;
+    }
+
+    .item-char{
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      max-width: 40px;
+      max-height: 40px;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background: none;
+      border-radius: 1000em;
+      border: solid 2px $positive;
+      color: $positive;
+      text-align: center;
+      line-height: 2.1em;
+      vertical-align: middle;
     }
   }
 }
