--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,7 @@
 /* Empty. Add your own CSS if you like */
+.strong {
+  font-weight: 600; }
+
 .center-block {
   display: block;
   margin-left: auto;
@@ -88,7 +91,23 @@
 .list .item.item-accordion.ng-hide-add, .list .item.item-accordion.ng-hide-remove {
   display: block !important; }
 .list .item.odd {
-  background-color: #c0c0c0 !important; }
+  background-color: #f0f0f0 !important; }
+.list .item .item-char {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  max-width: 40px;
+  max-height: 40px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: none;
+  border-radius: 1000em;
+  border: solid 2px #387ef5;
+  color: #387ef5;
+  text-align: center;
+  line-height: 2.1em;
+  vertical-align: middle; }
 
 #map_canvas {
   width: 100%;
