--- a/www/templates/partial/result-tmp.html
+++ b/www/templates/partial/result-tmp.html
@@ -5,8 +5,10 @@
     <ion-content>
         <ion-list ng-repeat="item in markerList" class="list odd-background">
             <ion-item ng-class-odd="'odd'" ng-class-even="'even'" class="list-item item-avatar item-text-wrap">
-                <img src="/img/venkman.jpg"/>
-                <span>{{item.name}}</span><span class="item-note">{{item.address}}</span>
+                <div class="item-char">{{item.firstChar}}</div>
+                <span class="item-note">{{item.distance}} (km)</span>
+                <h2>{{item.title}}</h2>
+                <p>{{item.address}}</p>
             </ion-item>
         </ion-list>
     </ion-content>
