--- a/www/templates/customer/info.html
+++ b/www/templates/customer/info.html
@@ -29,5 +29,10 @@
                 {{ store.website }}&nbsp;
             </a>
         </div>
+		<div class="button-bar">
+			<button class="button button-outline icon-left ion-android-list button-positive" ui-sref="customer.reservation">Reservation</button>
+			<button class="button button-outline icon-left ion-android-star-outline button-positive" ui-sref="customer.feedback">Feedback</button>
+		</div>
+		<br/>
     </ion-content>
 </ion-view>
