--- a/www/templates/customer/dashboard.html
+++ b/www/templates/customer/dashboard.html
@@ -14,9 +14,9 @@
                 <br><br><br>
                 <div class="card-circle text-center">
                     <div id="qrcode"></div>
-                    <h4 class="strong">46178469187891</h4>
+                    <h4 class="strong">{{userProfile.code}}</h4>
                 </div>
-                <!--<button class="button button-full button-positive" ng-click="performValidRequest()">
+                <!--<button class="button button-fullxdc button-positive" ng-click="performValidRequest()">
                     Make Valid Request
                 </button>
                 <button class="button button-full button-energized" ng-click="performUnauthorizedRequest()">
@@ -28,8 +28,8 @@
                 <br><br>
                 {{response}}
                 <div class="button-bar">
-                    <button class="button button-outline icon-left ion-android-checkmark-circle button-energized" ui-sref="customer.info">My place</button>
-                    <button class="button button-outline icon-left ion-android-list button-balanced" ui-sref="customer.note">Note</button>
+                    <button class="button button-outline icon-left ion-android-checkmark-circle button-positive" ui-sref="customer.info">My place</button>
+                    <button class="button button-outline icon-left ion-android-list button-positive" ui-sref="customer.note">Note</button>
                     <!--button class="button button-outline icon-left ion-android-star-outline button-calm" ui-sref="customer.feedback">Feedback</button-->
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <ion-tab title="Around" class="energized" icon="ion-map" href="#/customer/around">
             <ion-nav-view name="around-tab"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="My Offer" class="balanced" icon="ion-android-subway" href="#/customer/offer">
+        <ion-tab title="My Offer" class="balanced" icon="ion-pricetags" href="#/customer/offer">
             <ion-nav-view name="offer-tab"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
