--- a/www/templates/customer/feedback.html
+++ b/www/templates/customer/feedback.html
@@ -1,19 +1,16 @@
 <ion-view view-title="Feedback" name="customer-feedback-view">
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+    <ion-nav-buttons side="right">
+        <button class="button button-stable" ng-click="openModal()"><i class="ion ion-plus"></i></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <div class="list">
-            <div class="item item-divider">
-                Rating
-            </div>
-            <div class="item range">
-                <i class="icon ion-android-star-outline"></i>
-                <input type="range" name="rate" ng-model="data.rate">
-                <i class="icon ion-android-star"></i>
-            </div>
-            <label class="item item-input">
-                <textarea placeholder="Comments" rows="8" ng-model="data.comment"></textarea>
-            </label>
+            <ion-item class="item" ng-repeat="item in customerFeedbacks">
+                <p><span class="strong">Rate:</span> {{ item.rate }} </p>
+                <p><span class="strong">Service:</span> {{ item.service }} | <span class="strong">Employee:</span> {{ item.employee }}</p>
+                <p>{{ item.content }}</p>
+            </ion-item>
         </div>
-        <button class="button button-block button-positive">Submit</button>
     </ion-content>
 </ion-view>
