--- a/www/templates/customer/main-abstract.html
+++ b/www/templates/customer/main-abstract.html
@@ -11,15 +11,15 @@
       </ion-header-bar>
       <ion-content has-header="true">
         <ul class="list">
-          <a ui-sref="customer.dash" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-social-buffer"></i>Dashboard</a>
+          <a ui-sref="customer.dash" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-social-buffer"></i>Home</a>
           <a ui-sref="customer.profile" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-person"></i>Profile</a>
-          <a ui-sref="customer.setting" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-gear-a"></i>Setting</a>
-          <a ui-sref="customer.help" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-help"></i>Help</a>
+          <!--a ui-sref="customer.setting" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-gear-a"></i>Setting</a-->
           <a ui-sref="customer.contact" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-email"></i> Contact</a>
+          <a ui-sref="customer.help" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-help"></i>Help</a>
         </ul>
       </ion-content>
       <ion-footer-bar class="bar bar-footer">
-        <a class="button button-fullwidth" ui-sref="main.policy" ng-click="toggleLeft()">Privacy Policy</a>
+        <a class="button button-fullwidth" ui-sref="customer.policy" ng-click="toggleLeft()">Privacy Policy</a>
       </ion-footer-bar>
     </ion-side-menu>
 </ion-side-menus>
