--- a/www/templates/customer/note.html
+++ b/www/templates/customer/note.html
@@ -1,14 +1,16 @@
 <ion-view view-title="Note" name="customer-note-view">
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-nav-buttons side="right">
-        <button class="button button-stable"><i class="ion ion-plus"></i></button>
+        <button class="button button-stable" ng-click="openModal()"><i class="ion ion-plus"></i></button>
     </ion-nav-buttons>
     <ion-content class="padding">
-        <div class="list">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+        <ion-list>
             <ion-item class="item" ng-repeat="item in customerNotes">
+                <span class="item-note">{{ item.created_at | date:"MMM-yyyy" }}</span>
                 <p><span class="strong">Product code:</span> {{item.product_code}} || <span class="strong">Barcode:</span> {{item.barcode}}</p>
                 <p>{{ item.content }}</p>
             </ion-item>
-        </div>
+        </ion-list>
     </ion-content>
 </ion-view>
